# anycost-adaptor-template

./: .gitignore  CLI.md  LICENSE  README.md  generate_adaptor.py  pyproject.toml  pyvenv.cfg
anycost_generator/: __init__.py  __main__.py
anycost_generator/classes/: base.py  class1_credit.py  class2_structured.py  class3_enterprise.py  resolver.py
anycost_generator/cli/: display.py  interactive.py  main.py
anycost_generator/config/: loader.py  schema.py
anycost_generator/engine/: generator.py  renderer.py
anycost_generator/tiers/: base.py  resolver.py  tier1_credit.py  tier2_structured.py  tier3_enterprise.py
anycost_generator/validation/: config_validator.py  output_validator.py
config/: bfl_config.yaml  confluent_config.yaml  elevenlabs_config.yaml  heroku_config.yaml  leonardo_config.yaml  lumaai_config.yaml  runware_config.yml  sample_provider_config.yaml  schema_reference.yaml  sumologic_config.yaml  template_config.yaml
config/examples/: bfl_config.yaml  confluent_config.yaml  elevenlabs_config.yaml  heroku_config.yaml  (+6 more)
src/: csv_to_cbf.py  provider_anycost_adaptor.py.template  provider_client.py.template  provider_config.py.template  provider_transform.py.template
templates/: anycost.py.template  pyproject.toml.template  requirements.txt.template
tests/: conftest.py  test_class_resolver.py  test_cli_interactive.py  test_config_schema.py  test_generator_class1.py  test_generator_class2.py  test_generator_class3.py  test_generator_tier1.py  test_generator_tier2.py  test_generator_tier3.py  test_renderer.py  test_tier_resolver.py
(+30 files in other folders)
